--- a/sitemap.html
+++ b/sitemap.html
@@ -10,55 +10,55 @@
 <body>
     <ul style="display:flex;flex-direction: column; gap: 10px;">
         <li>
-            <a href="./404.html">Страница 404</a>
+            <a target="_blank" href="./404.html">Страница 404</a>
         </li>
         <li>
-            <a href="./auth.html">Страница авторизации (отображается только на мобильной версии, на десктопе авторизация в шапке сайта)</a>
+            <a target="_blank" href="./auth.html">Страница авторизации (отображается только на мобильной версии, на десктопе авторизация в шапке сайта)</a>
         </li>
         <li>
-            <a href="./cart.html">Страница корзины (с двумя состояниями: корзина с товарами и пустая)</a>
+            <a target="_blank" href="./cart.html">Страница корзины (с двумя состояниями: корзина с товарами и пустая)</a>
         </li>
         <li>
-            <a href="./catalog.html">Страница каталога</a>
+            <a target="_blank" href="./catalog.html">Страница каталога</a>
         </li>
         <li>
-            <a href="./category.html">Страница категории</a>
+            <a target="_blank" href="./category.html">Страница категории</a>
         </li>
         <li>
-            <a href="./compare.html">Страница сравнения (с двумя состояниями: пустая и с товарами)</a>
+            <a target="_blank" href="./compare.html">Страница сравнения (с двумя состояниями: пустая и с товарами)</a>
         </li>
         <li>
-            <a href="./index.html">Главная страница</a>
+            <a target="_blank" href="./index.html">Главная страница</a>
         </li>
         <li>
-            <a href="./order.html">Страница оформления заказа (с двумя состояниями: само оформление и сообщение о том, что заказ оформление)</a>
+            <a target="_blank" href="./order.html">Страница оформления заказа (с двумя состояниями: само оформление и сообщение о том, что заказ оформление)</a>
         </li>
         <li>
-            <a href="./personal.html">Личный кабинет</a>
+            <a target="_blank" href="./personal.html">Личный кабинет</a>
         </li>
         <li>
-            <a href="./product.html">Страница товара</a>
+            <a target="_blank" href="./product.html">Страница товара</a>
         </li>
         <li>
-            <a href="./favorites.html">Страница избранного (с двумя состояниями: пустая и с товарами)</a>
+            <a target="_blank" href="./favorites.html">Страница избранного (с двумя состояниями: пустая и с товарами)</a>
         </li>
         <li>
-            <a href="./search.html">Страница поиска (с двумя состояниями: пустая и с товарами)</a>
+            <a target="_blank" href="./search.html">Страница поиска (с двумя состояниями: пустая и с товарами)</a>
         </li>
         <li>
-            <a href="./brands.html">Страница брендов</a>
+            <a target="_blank" href="./brands.html">Страница брендов</a>
         </li>
         <li>
-            <a href="./brand.html">Страница бренда</a>
+            <a target="_blank" href="./brand.html">Страница бренда</a>
         </li>
         <li>
-            <a href="./actions.html">Страница акций</a>
+            <a target="_blank" href="./actions.html">Страница акций</a>
         </li>
         <li>
-            <a href="./action.html">Страница акции</a>
+            <a target="_blank" href="./action.html">Страница акции</a>
         </li>
         <li>
-            <a href="./contacts.html">Страница акции</a>
+            <a target="_blank" href="./contacts.html">Страница акции</a>
         </li>
     </ul>
 </body>
